登陆页切片

--- a/src/login.html
+++ b/src/login.html
@@ -1,1 +1,38 @@
-login
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>哈尔滨工业大学出版社</title>
+  <link rel="stylesheet" href="//at.alicdn.com/t/font_1213266_zzjmnvp5bvk.css">
+  <link rel="stylesheet" href="./style/main.css">
+</head>
+
+<body>
+  <div class="logo-wrap">
+    <img class="logo" src="./asset/image/logo.png" alt="">
+    <div class="formlog">
+      <div class="input-box">
+        <label for="username" class=""><i class="iconfont icon-denglu"></i></label>
+        <input type="text" name="username" id="username" class="txt">
+      </div>
+    </div>
+    <div class="formlog">
+      <div class="input-box">
+        <label for="password" class=""><i class="iconfont icon-denglumima-baise"></i></label>
+        <input type="password" name="password" id="password" class="txt">
+      </div>
+    </div>
+    <div class="log-opt">
+      <input type="checkbox" name="checkbox" id="teacherIdentity"> 教师身份
+      <input type="checkbox" name="checkbox" id="rememberPsd"> 记住密码
+    </div>
+    <div class="log-btn">
+      <input type="button" class="subBtn" value="登陆" id="subBtn">
+    </div>
+  </div>
+</body>
+
+</html>
