--- a/src/login.html
+++ b/src/login.html
@@ -11,28 +11,31 @@
 </head>
 
 <body>
-  <div class="logo-wrap">
-    <img class="logo" src="./asset/image/logo.png" alt="">
-    <div class="formlog">
-      <div class="input-box">
-        <label for="username" class=""><i class="iconfont icon-denglu"></i></label>
-        <input type="text" name="username" id="username" class="txt">
+  <form id="loginForm">
+    <div class="logo-wrap">
+      <img class="logo" src="./asset/image/logo.png" alt="">
+      <div class="formlog">
+        <div class="input-box">
+          <label for="username" class=""><i class="iconfont icon-denglu"></i></label>
+          <input type="text" name="username" id="username" class="txt">
+        </div>
+      </div>
+      <div class="formlog">
+        <div class="input-box">
+          <label for="password" class=""><i class="iconfont icon-denglumima-baise"></i></label>
+          <input type="password" name="password" id="password" class="txt">
+        </div>
+      </div>
+      <div class="log-opt">
+        <input type="checkbox" name="checkbox" id="teacherIdentity"> 教师身份
+        <input type="checkbox" name="checkbox" id="rememberPsd"> 记住密码
+      </div>
+      <div class="log-btn">
+        <input type="button" class="subBtn" value="登陆" id="subBtn">
       </div>
     </div>
-    <div class="formlog">
-      <div class="input-box">
-        <label for="password" class=""><i class="iconfont icon-denglumima-baise"></i></label>
-        <input type="password" name="password" id="password" class="txt">
-      </div>
-    </div>
-    <div class="log-opt">
-      <input type="checkbox" name="checkbox" id="teacherIdentity"> 教师身份
-      <input type="checkbox" name="checkbox" id="rememberPsd"> 记住密码
-    </div>
-    <div class="log-btn">
-      <input type="button" class="subBtn" value="登陆" id="subBtn">
-    </div>
-  </div>
+  </form>
+  <script src="./lib/require.js" data-main="./js/Controller/student/login"></script>
 </body>
 
 </html>
