--- a/src/login.html
+++ b/src/login.html
@@ -23,7 +23,7 @@
       <div class="formlog">
         <div class="input-box">
           <label for="password" class=""><i class="iconfont icon-denglumima-baise"></i></label>
-          <input type="password" name="password" id="password" class="txt">
+          <input type="password" name="password" id="password" class="txt" value="aicoder.com">
         </div>
       </div>
       <div class="log-opt">
